# NerVault

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.example.py  docker-compose.yaml  docker-compose.yml  launcher.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: lint.yml  typecheck.yml
assets/css/: main.css
assets/js/: main.js
blueprints/: __init__.py
blueprints/auth/: __init__.py  routes.py
blueprints/meta/: __init__.py  routes.py
blueprints/wallet/: __init__.py  routes.py
docker/: nginx.conf
docker/hestia/: nervault.stpl  nervault.tpl
src/backend/: config.example.py  factory.py  launcher.py
src/backend/blueprints/: __init__.py
src/backend/blueprints/auth/: __init__.py  routes.py
src/backend/blueprints/index/: __init__.py  routes.py
src/backend/blueprints/meta/: __init__.py  routes.py
src/backend/blueprints/wallet/: __init__.py  routes.py
src/backend/templates/email/: activate.html  backup_code_used.html  change_email.html  email_changed.html  email_updated.html  reset_password.html  step_up_code.html  two_factor_code.html
src/backend/utils/: csrf.py  decorators.py  mail.py  models.py  tokens.py  twofa.py
src/frontend/: App.vue  index.html  main.ts  style.css
src/frontend/components/: CopyField.vue  SupportModal.vue  TheFooter.vue  TheNavbar.vue
src/frontend/components/ui/: Alert.vue  Badge.vue  BaseModal.vue  Btn.vue  Card.vue  CopyField.vue  FormField.vue  IconBtn.vue  InfoTip.vue  PageHeader.vue  PasswordInput.vue  Spinner.vue  Stat.vue  TwoFactorField.vue
src/frontend/composables/: useTheme.ts  useToast.ts
src/frontend/lib/: api.ts  format.ts
src/frontend/router/: index.ts
src/frontend/stores/: auth.ts  wallet.ts
src/frontend/views/: Faq.vue  Home.vue  Maintenance.vue  Privacy.vue  Terms.vue
src/frontend/views/account/: ConfirmEmailChange.vue  Profile.vue  TwoFactorSettings.vue
src/frontend/views/auth/: ChangePassword.vue  Confirm.vue  Login.vue  Register.vue  ResetPassword.vue  ResetRequest.vue  Unconfirmed.vue
src/frontend/views/wallet/: Dashboard.vue  Loading.vue  Setup.vue
templates/: footer.html  header.html  navbar.html  scripts.html
templates/auth/: change_password.html  login.html  register.html  reset.html  unconfirmed.html
templates/meta/: faq.html  index.html  maintenance.html  privacy.html  terms.html
templates/wallet/: dashboard.html  loading.html  setup.html
utils/: decorators.py  factory.py  forms.py  mail.py  models.py  tokens.py
