[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NerVault"
version = "2.0.0"
description = "A custodial web wallet for the Nerva (XNV) cryptocurrency."
license = "GPL-3.0"
authors = [
  { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "quart==0.20.0",
    "quart-bcrypt==0.0.9",
    "redis==7.4.0",
    "password-validator==1.0",
    "aiohttp==3.14.0",
    "docker==7.1.0",
    "pymongo==4.16.0",
    "quart-auth==0.11.0",
    "quart-rate-limiter==0.10.0",
    "qrcode[pil]==8.2",
    "email-validator==2.3.0",
    "aiosmtplib==5.1.0",
    "httpx==0.28.1",
    "nerva-py==2.0.0",
]

[project.optional-dependencies]
speed = [
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pre-commit==4.5.1",
    "ruff==0.15.10",
    "types-docker",
    "types-qrcode",
]

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.mypy]
files = ["src/backend"]
mypy_path = "src"
explicit_package_bases = true
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "nerva",
    "nerva.*",
    "password_validator",
    "quart_rate_limiter.*",
    "backend.config",
]
ignore_missing_imports = true
